--- a/src/components/style.css
+++ b/src/components/style.css
@@ -63,6 +63,12 @@ h2 {
     
 }
 
+.hero-content p {
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+    line-height: 1.6;
+}
+
 .hero-btnn {
   display: inline-block;
   background-color: var(--tan);
