--- a/src/components/auth/Login.css
+++ b/src/components/auth/Login.css
@@ -177,7 +177,8 @@
 }
 
 .auth-button:disabled {
-  background-color: #d1d5db;
+  background-color: #797979;
+  color: #fbfbfb;
   cursor: not-allowed;
 }
 
