--- a/src/components/Dasboard.css
+++ b/src/components/Dasboard.css
@@ -1,5 +1,3 @@
-
-
 /* Base Styles */
 :root {
     --dark-brown: #3E2C1C;
@@ -241,7 +239,7 @@
   color: #2196f3;
 }
 
-.status-badge.processing {
+.status-badge.in-process {
   background: #fff8e1;
   color: #8e6c04;
 }
@@ -347,7 +345,7 @@
   margin-bottom: 2rem;
 }
 
-.edit-btn, .cancel-btn, .save-btn {
+.edit-btn-dashboard, .cancel-btn-dashboard, .save-btn-dashboard {
   padding: 0.5rem 1rem;
   border-radius: 4px;
   cursor: pointer;
@@ -358,33 +356,36 @@
   gap: 0.5rem;
 }
 
-.edit-btn {
+.edit-btn-dashboard {
   background: var(--dark-brown);
+  color: whitesmoke ;
   border: none;
 }
 
-.edit-btn:hover {
+.edit-btn-dashboard:hover {
   background: var(--gold);
+  color: #191919;
+
 }
 
-.cancel-btn {
+.cancel-btn-dashboard {
   background: #ffebee;
   border: none;
   color: #f44336;
 }
 
-.cancel-btn:hover {
+.cancel-btn-dashboard:hover {
   background: #ffcdd2;
 }
 
-.save-btn {
+.save-btn-dashboard {
   background: var(--dark-brown);
   color: white;
   border: none;
   margin-top: 1rem;
 }
 
-.save-btn:hover {
+.save-btn-dashboard:hover {
   background: #000000;
 }
 
