--- a/src/components/auth/Signup.css
+++ b/src/components/auth/Signup.css
@@ -209,18 +209,30 @@ body {
   max-width: 500px;
   margin: 0 auto;
   padding: 40px;
-  background: white;
+  background: rgb(231, 230, 230);
   border-radius: var(--border-radius);
   box-shadow: var(--box-shadow);
 }
 
-.success-icon {
+.signup-success-icon {
+   width: 80px;
+  height: 80px;
+  margin: 0 auto 1.5rem;
+  background: #2ecc71;
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2.5rem;
+  font-weight: bold;
   font-size: 60px;
-  color: darkgreen;
+  /* background: #000; */
+  /* color: darkgreen; */
   margin-bottom: 20px;
 }
 
-.signup-success h2 {
+.signup-success-h2 {
   color: var(--success-color);
   margin-bottom: 15px;
   font-size: 18px;
